--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sass-loader": "^13.0.2",
     "vue": "^3.2.13",
     "vue-router": "^4.0.16",
-    "vue3-lazy": "^1.0.0-alpha.1"
+    "vue3-lazy": "^1.0.0-alpha.1",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
