--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@better-scroll/slide": "^2.4.2",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "create-keyframe-animation": "^0.1.0",
     "good-storage": "^1.1.1",
     "pinyin": "^2.11.2",
     "sass": "^1.53.0",
