--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@better-scroll/observe-dom": "^2.4.2",
+    "@better-scroll/pull-up": "^2.4.2",
     "@better-scroll/slide": "^2.4.2",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
@@ -17,6 +18,7 @@
     "pinyin": "^2.11.2",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
+    "throttle-debounce": "^5.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.16",
     "vue3-lazy": "^1.0.0-alpha.1",
